# apiscout

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
apiscout/: __init__.py  __main__.py
apiscout/adapters/: __init__.py  jmix.py  registry.py  ruoyi.py  spring_boot.py
apiscout/config/: default.yaml
apiscout/core/: config.py  workflow.py
apiscout/templates/: report.html.j2
apiscout/ui/: cli.py
apiscout/web/: __init__.py  app.py
docs/: architecture.html  guide.html  使用手册.html
docs/specs/: 2026-03-29-apiscout-design.md  2026-03-29-apiscout-v1-plan.md  2026-03-30-v1.1-db-schema-scan-design.md  2026-03-30-v1.1-db-schema-scan-plan.md  2026-03-30-v1.2-interactive-review-design.md
pack/: README_部署.md  build_online_pack.sh  install_mac.sh  install_windows.bat  run.bat  setup_portable.ps1  一键安装.bat
pack/portable/: install_offline.bat
scripts/: debug_menu.py  integration_test.py
test_output/localhost_8080/: api_docs.html  auth_profile.yaml  draft_spec.yaml  meta.yaml  (+2 more)
tests/: conftest.py  test_adapters.py  test_api_prober.py  test_auth.py  test_auth_profile_gen.py  test_config.py  test_db_dialect_base.py  test_db_dialect_pg.py  test_db_introspector.py  test_db_models.py  test_db_relations.py  test_db_sampler.py  test_dedup.py  test_enricher.py  test_filter.py  test_jmix_spec.py  test_js_analyzer.py  test_link_extractor.py  test_navigator.py  test_openapi_gen.py  test_recorder.py  test_report_gen.py  test_router.py  test_schema.py  test_schema_enricher.py  test_schema_report_html.py  test_scroll_loader.py  test_store.py  test_workflow.py
(+39 files in other folders)
